--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 				<!-- Intro -->
 					<section class="intro">
 						<header>
-							<h1>Paradigm Shift</h1>
-							<p>A free responsive site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> / <a href="https://html5up.net">HTML5 UP</a></p>
+							<h1>Discover the Transformative Power of Ashtanga Yoga with Shashikala</h1>
+							<p>Welcome to our Ashtanga Yoga studio, where we offer a sanctuary for those seeking balance, strength, and inner peace through the ancient practice of Ashtanga Yoga. Rooted in tradition yet adaptable to modern lifestyles, Ashtanga Yoga offers a dynamic and holistic approach to physical, mental, and spiritual well-being. <a href="https://twitter.com/ajlkn">@ajlkn</a> / <a href="https://html5up.net">HTML5 UP</a></p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center"><img src="images/pic01.jpg" alt="" /></span>
+							<span class="image fill" data-position="center"><img src="images/pic01.webp" alt="" /></span>
 						</div>
 					</section>
 
