remove unwanted section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<!-- Intro -->
 					<section class="intro">
 						<header>
-							<h1>Discover the Transformative Power of Ashtanga Yoga with Shashikala</h1>
+							<h1>Ashtanga Yoga with Shashikala</h1>
 							<p>Welcome to our Ashtanga Yoga studio, where we offer a sanctuary for those seeking balance, strength, and inner peace through the ancient practice of Ashtanga Yoga. Rooted in tradition yet adaptable to modern lifestyles, Ashtanga Yoga offers a dynamic and holistic approach to physical, mental, and spiritual well-being. <a href="https://twitter.com/ajlkn">@ajlkn</a> / <a href="https://html5up.net">HTML5 UP</a></p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
@@ -35,10 +35,10 @@
 				<!-- Section -->
 					<section id="first">
 						<header>
-							<h2>Magna sed nullam nisl adipiscing</h2>
+							<h2>Our story</h2>
 						</header>
 						<div class="content">
-							<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+							<p><strong>Our story</strong> We started our yogashala...</p>
 							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 						</div>
 					</section>
@@ -46,32 +46,29 @@
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>Feugiat consequat tempus ultrices</h2>
+							<h2>Services provided</h2>
 						</header>
 						<div class="content">
-							<p><strong>Etiam tristique libero</strong> eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum.</p>
+							<p><strong>Services provided</strong> The following services are provided in our yogashala</p>
 							<ul class="feature-icons">
-								<li class="icon solid fa-laptop">Consequat tempus</li>
-								<li class="icon solid fa-bolt">Etiam adipiscing</li>
-								<li class="icon solid fa-signal">Libero nullam</li>
-								<li class="icon solid fa-cog">Blandit condimentum</li>
-								<li class="icon solid fa-map-marker-alt">Lorem ipsum dolor</li>
-								<li class="icon solid fa-code">Nibh amet venenatis</li>
+								<li class="icon solid fa-laptop">Beginners Yoga</li>
+								<li class="icon solid fa-bolt">Mysuru style practice</li>
+								<li class="icon solid fa-signal">Teacher training</li>
 							</ul>
-							<p>Vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+							<p><b>Beginner: </b>Dive deep into the essence of Ashtanga Yoga with our Mysore-style classes. In this self-paced format, students receive personalized instruction and adjustments tailored to their individual needs, allowing for a transformative and empowering practice experience.</p>
 						</div>
 					</section>
 
 				<!-- Section -->
-					<section>
+					<!-- <section>
 						<header>
 							<h2>Ultrices erat magna sed condimentum</h2>
 						</header>
 						<div class="content">
-							<p><strong>Integer mollis egestas</strong> nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+							<p><strong>Integer mollis egestas</strong> nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p> -->
 
 							<!-- Section -->
-								<section>
+								<!-- <section>
 									<header>
 										<h3>Erat aliquam</h3>
 										<p>Vehicula ultrices dolor amet ultricies et condimentum. Magna sed etiam consequat, et lorem adipiscing sed dolor sit amet, consectetur amet do eiusmod tempor incididunt  ipsum suspendisse ultrices gravida.</p>
@@ -84,10 +81,10 @@
 											<a href="images/gallery/fulls/04.jpg" class="landscape"><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
 										</div>
 									</div>
-								</section>
+								</section> -->
 
 							<!-- Section -->
-								<section>
+								<!-- <section>
 									<header>
 										<h3>Nisl consequat</h3>
 										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam sed facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet mauris. Ut magna finibus nisi nec lacinia ipsum maximus.</p>
@@ -99,10 +96,10 @@
 											<a href="images/gallery/fulls/07.jpg"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
 										</div>
 									</div>
-								</section>
+								</section> -->
 
 							<!-- Section -->
-								<section>
+								<!-- <section>
 									<header>
 										<h3>Lorem gravida</h3>
 										<p>Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aenean ornare velit lacus, ac varius sed enim lorem ullamcorper dolore.  ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis.</p>
@@ -114,20 +111,19 @@
 											<a href="images/gallery/fulls/10.jpg" class="landscape"><img src="images/gallery/thumbs/10.jpg" alt="" /></a>
 										</div>
 									</div>
-								</section>
+								</section> -->
 
-						</div>
-					</section>
+						<!-- </div>
+					</section> -->
 
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>Duis sed adpiscing veroeros amet</h2>
+							<h2>Testimonial</h2>
 						</header>
 						<div class="content">
 							<p><strong>Proin tempus feugiat</strong> sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore.</p>
 							<ul class="actions">
-								<li><a href="#" class="button primary large">Get Started</a></li>
 								<li><a href="#" class="button large">Learn More</a></li>
 							</ul>
 						</div>
