add banner and icons

--- a/index.html
+++ b/index.html
@@ -12,9 +12,18 @@
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/banner.css">
+		<style>
+			.stars {
+			  font-size: 24px;
+			}
+		</style>
 	</head>
 	<body class="is-preload">
-
+			<div id="infoBanner" class="info-banner">
+				<span class="close" onclick="closeBanner()">&times;</span>
+				<p>Hello, Thanks for visting the website. Please note that I am unavailable from March 29 till June 15 in Mysore and will be teaching classes in Bhagsunag,Himachal. Please contact us through email or whatsapp</p>
+			</div>
 		<!-- Wrapper -->
 			<div id="wrapper">
 
@@ -22,7 +31,7 @@
 					<section class="intro">
 						<header>
 							<h1>Ashtanga Yoga with Shashikala</h1>
-							<p>Welcome to our Ashtanga Yoga studio, where we offer a sanctuary for those seeking balance, strength, and inner peace through the ancient practice of Ashtanga Yoga. Rooted in tradition yet adaptable to modern lifestyles, Ashtanga Yoga offers a dynamic and holistic approach to physical, mental, and spiritual well-being. <a href="https://twitter.com/ajlkn">@ajlkn</a> / <a href="https://html5up.net">HTML5 UP</a></p>
+							<p>Welcome to our Ashtanga Yoga studio, where we offer a sanctuary for those seeking balance, strength, and inner peace through the ancient practice of Ashtanga Yoga. Rooted in tradition yet adaptable to modern lifestyles, Ashtanga Yoga offers a dynamic and holistic approach to physical, mental, and spiritual well-being. Thank you - Shashikala</p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
@@ -38,8 +47,8 @@
 							<h2>Our story</h2>
 						</header>
 						<div class="content">
-							<p><strong>Our story</strong> We started our yogashala...</p>
-							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+							<p><strong>Our story</strong> Shashikala is a ashtanga yoga teacher in Mysore, India. There are actually only two female teachers in Mysore: Saraswathi, Shri K. Pattabhi Jois daughter, and Shashikala. Shashikala practiced with Pattabhi Jois for about 15 years, from 1994 until 2009 when he passed away. She now teaches ashtanga yoga at The Three Sisters Yogashala near Lakshmipuram. Shashikala is the youngest of the famous three sisters. For many years they have been offering different services to yogis who come to practice ashtanga yoga in Mysore</p>
+							<span class="image main"><img src="images/Shashikala-Yoga-Mysore.jpg" alt="" /></span>
 						</div>
 					</section>
 
@@ -50,12 +59,14 @@
 						</header>
 						<div class="content">
 							<p><strong>Services provided</strong> The following services are provided in our yogashala</p>
-							<ul class="feature-icons">
-								<li class="icon solid fa-laptop">Beginners Yoga</li>
-								<li class="icon solid fa-bolt">Mysuru style practice</li>
-								<li class="icon solid fa-signal">Teacher training</li>
-							</ul>
-							<p><b>Beginner: </b>Dive deep into the essence of Ashtanga Yoga with our Mysore-style classes. In this self-paced format, students receive personalized instruction and adjustments tailored to their individual needs, allowing for a transformative and empowering practice experience.</p>
+								<img src="images/gallery/icons/guru32.png" alt="" sizes="32x32" rel="icon">Beginners Yoga</li></br>
+								<img src="images/gallery/icons/guru32.png" alt="" sizes="32x32" rel="icon">Mysuru style practice</li></br>
+								<img src="images/gallery/icons/guru32.png" alt="" sizes="32x32" rel="icon">Pranayama</li></br>
+								<img src="images/gallery/icons/guru32.png" alt="" sizes="32x32" rel="icon">Teacher training (practice, adjustments, stretching, mudras and full Vinyasa</li>
+							<p><b>Beginners: </b>We teach beginners to advanced yoga practitioners and drop in classes are allowed for all type of practitioners</p>	
+							<p><b>Mysuru style practice: </b>Dive deep into the essence of Ashtanga Yoga with our Mysore-style classes. In this self-paced format, students receive personalized instruction and adjustments tailored to their individual needs, allowing for a transformative and empowering practice experience.</p>
+						    <p><b>Pranayama: </b>Pranayama is a fundamental aspect of yoga practice that involves various breathing techniques. In Sanskrit, "prana" means life force or vital energy, and "ayama" means control or expansion. Therefore, pranayama can be understood as the practice of controlling or expanding one's life force through breath.</p>
+						    <p><b>Teacher Training: </b>Teacher training has the following included pratice 6-8 am, 10-12 am stretching and adjustments and 2-4 pm mudras and full vinyasa</p>
 						</div>
 					</section>
 
@@ -120,12 +131,16 @@
 					<section>
 						<header>
 							<h2>Testimonial</h2>
+							<h6>From google reviews</h6>
 						</header>
 						<div class="content">
-							<p><strong>Proin tempus feugiat</strong> sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore.</p>
-							<ul class="actions">
-								<li><a href="#" class="button large">Learn More</a></li>
-							</ul>
+							<div class="stars">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
+							<p>What a wonderful teacher Shashikala is! My husband is quite new to yoga sessions and I practise Vinyasa Flow regularly in London, Shashikala, very skilfully, led sessions that meant we both enjoyed the experience whilst also benefitting from learning more about Ashtanga style yoga. We were in Mysore for a week and came every morning before breakfast as it was such a worthwhile experience.</p> </br><strong>Sharon Owen</strong> </p>
+						    <div class="stars">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
+							<p>Shashikala is a wonderful, kind, dedicated and knowledgeable teacher. For three weeks she has worked with me to refine and prefect my practice.
+
+								I strongly recommend practicing here.
+							</p> </br><strong>Clare Nicholls</strong> </p>
 						</div>
 					</section>
 
@@ -403,7 +418,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<h2>Get in touch</h2>
 						</header>
 						<div class="content">
-							<p><strong>Auctor commodo</strong> interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis.</p>
+							<p><strong>Contact Us</strong> Contact Us for </p>
 							<form action="https://formspree.io/f/moqgwppg" method="POST">
 								<div class="fields">
 									<div class="field half">
@@ -425,25 +440,26 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<ul class="items">
 								<li>
 									<h3>Email</h3>
-									<a href="#">information@untitled.ext</a>
+									<a href="#">threesistersyoga@gmail.com</a>
 								</li>
 								<li>
 									<h3>Phone</h3>
-									<a href="#">(000) 000-0000</a>
+									<a href="#">(91) 8762431359</a>
 								</li>
 								<li>
 									<h3>Address</h3>
-									<span>1234 Somewhere Road, Nashville, TN 00000</span>
+									<span>Three Sisters Yoga Shala
+										# 366, Chaluvamba Agrahara
+										K.R. Mohalla (Next to Kaveri Hotel)
+										Mysore 570004. India</span>
 								</li>
 								<li>
 									<h3>Elsewhere</h3>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-										<li><a href="#" class="icon brands fa-codepen"><span class="label">Codepen</span></a></li>
+										<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
+										<li><a href="https://www.facebook.com/3sistersyogashala/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+										<!-- <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
+
 									</ul>
 								</li>
 							</ul>
@@ -462,6 +478,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/banner.js"></script>
 
 	</body>
 </html>
