add video for promotion

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
 	<body class="is-preload">
 			<div id="infoBanner" class="info-banner">
 				<span class="close" onclick="closeBanner()">&times;</span>
-				<p>Hello, Thanks for visting the website. Please note that I am unavailable from March 29 till June 15 in Mysore and will be teaching classes in Bhagsunag,Himachal. Please contact us through email or whatsapp</p>
+				<p><b>Hello, Thanks for visting the website. Please note that Shashikala is unavailable from March 29, 2024 till June 15, 2024 in Mysore and will be teaching classes in Bhagsunag,Himachal. Please contact us through phone, whatsapp for more information.</b></p>
+				<video width="640" height="360" controls style="display: block; margin: 0 auto;">
+					<source src="video/promotion/yoga-invite.mp4" type="video/mp4">
+					Your browser does not support the video tag.
+				</video>
 			</div>
 		<!-- Wrapper -->
 			<div id="wrapper">
@@ -418,25 +422,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<h2>Get in touch</h2>
 						</header>
 						<div class="content">
-							<p><strong>Contact Us</strong> Contact Us for </p>
-							<form action="https://formspree.io/f/moqgwppg" method="POST">
-								<div class="fields">
-									<div class="field half">
-										<input type="text" name="name" id="name" placeholder="Name" />
-									</div>
-									<div class="field half">
-										<input type="email" name="email" id="email" placeholder="Email" />
-									</div>
-									<div class="field">
-										<textarea name="message" id="message" placeholder="Message" rows="7"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" class="button primary" /></li>
-								</ul>
-							</form>
-						</div>
-						<footer>
+							<p><strong>Contact Us</strong></p>
 							<ul class="items">
 								<li>
 									<h3>Email</h3>
@@ -463,7 +449,51 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 									</ul>
 								</li>
 							</ul>
-						</footer>
+							<!-- <form action="https://formspree.io/f/moqgwppg" method="POST">
+								<div class="fields">
+									<div class="field half">
+										<input type="text" name="name" id="name" placeholder="Name" />
+									</div>
+									<div class="field half">
+										<input type="email" name="email" id="email" placeholder="Email" />
+									</div>
+									<div class="field">
+										<textarea name="message" id="message" placeholder="Message" rows="7"></textarea>
+									</div>
+								</div>
+								<ul class="actions">
+									<li><input type="submit" value="Send Message" class="button primary" /></li>
+								</ul>
+							</form> -->
+						</div>
+						<!-- <footer>
+							<ul class="items">
+								<li>
+									<h3>Email</h3>
+									<a href="#">threesistersyoga@gmail.com</a>
+								</li>
+								<li>
+									<h3>Phone</h3>
+									<a href="#">(91) 8762431359</a>
+								</li>
+								<li>
+									<h3>Address</h3>
+									<span>Three Sisters Yoga Shala
+										# 366, Chaluvamba Agrahara
+										K.R. Mohalla (Next to Kaveri Hotel)
+										Mysore 570004. India</span>
+								</li>
+								<li>
+									<h3>Elsewhere</h3>
+									<ul class="icons">
+										<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
+										<li><a href="https://www.facebook.com/3sistersyogashala/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+										<!-- <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
+
+									</ul>
+								</li>
+							</ul>
+						</footer> -->
 					</section>
 
 				<!-- Copyright -->
