--- a/index.html
+++ b/index.html
@@ -486,9 +486,9 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 								<li>
 									<h3>Elsewhere</h3>
 									<ul class="icons">
-										<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
+										 <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> 
 										<li><a href="https://www.facebook.com/3sistersyogashala/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<!-- <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
+										 <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> 
 
 									</ul>
 								</li>
