fix for mobile devices

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<div id="infoBanner" class="info-banner">
 				<span class="close" onclick="closeBanner()">&times;</span>
 				<p><b>Hello, Thanks for visting the website. Please note that Shashikala is unavailable from March 29, 2024 till June 15, 2024 in Mysore and will be teaching classes in Bhagsunag,Himachal. Please contact us through phone, whatsapp for more information.</b></p>
-				<video width="640" height="360" controls style="display: block; margin: 0 auto;">
+				<video controls style="width: 100%; height: auto;">
 					<source src="video/promotion/yoga-invite.mp4" type="video/mp4">
 					Your browser does not support the video tag.
 				</video>
