add icons and correct banner

--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
 	<body class="is-preload">
 			<div id="infoBanner" class="info-banner">
 				<span class="close" onclick="closeBanner()">&times;</span>
-				<p><b>Hello, Thanks for visting the website. Please note that Shashikala is unavailable from March 29, 2024 till June 15, 2024 in Mysore and will be teaching classes in Bhagsunag,Himachal. Please contact us through phone, whatsapp for more information.</b></p>
-				<video controls style="width: 100%; height: auto;">
+				<p><b>Shashikala will be unavailable from March 29, 2024 till June 15, 2024 in Mysore and will be teaching classes in Bhagsunag, Himachal. Please <a href="#contact">Contact Us</a>. Have a look at <a href="#services">Classes offered</a>.</b></p>
+				
+				<!-- <video controls style="width: 100%; height: 10%;">
 					<source src="video/promotion/yoga-invite.mp4" type="video/mp4">
 					Your browser does not support the video tag.
-				</video>
+				</video> -->
 			</div>
 		<!-- Wrapper -->
 			<div id="wrapper">
@@ -36,6 +37,7 @@
 						<header>
 							<h1>Ashtanga Yoga with Shashikala</h1>
 							<p>Welcome to our Ashtanga Yoga studio, where we offer a sanctuary for those seeking balance, strength, and inner peace through the ancient practice of Ashtanga Yoga. Rooted in tradition yet adaptable to modern lifestyles, Ashtanga Yoga offers a dynamic and holistic approach to physical, mental, and spiritual well-being. Thank you - Shashikala</p>
+
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
@@ -57,16 +59,16 @@
 					</section>
 
 				<!-- Section -->
-					<section>
+					<section id="services">
 						<header>
 							<h2>Services provided</h2>
 						</header>
 						<div class="content">
 							<p><strong>Services provided</strong> The following services are provided in our yogashala</p>
-								<img src="images/gallery/icons/guru32.png" alt="" sizes="32x32" rel="icon">Beginners Yoga</li></br>
-								<img src="images/gallery/icons/guru32.png" alt="" sizes="32x32" rel="icon">Mysuru style practice</li></br>
-								<img src="images/gallery/icons/guru32.png" alt="" sizes="32x32" rel="icon">Pranayama</li></br>
-								<img src="images/gallery/icons/guru32.png" alt="" sizes="32x32" rel="icon">Teacher training (practice, adjustments, stretching, mudras and full Vinyasa</li>
+								<img src="images/gallery/icons/guru32.png" alt="" sizes="16x16" rel="icon">      Beginners Yoga</li></br>
+								<img src="images/gallery/icons/guru32.png" alt="" sizes="16x16" rel="icon">      Mysuru style practice</li></br>
+								<img src="images/gallery/icons/guru32.png" alt="" sizes="16x16" rel="icon">      Pranayama</li></br>
+								<img src="images/gallery/icons/guru32.png" alt="" sizes="16x16" rel="icon">      Teacher training</li></br>
 							<p><b>Beginners: </b>We teach beginners to advanced yoga practitioners and drop in classes are allowed for all type of practitioners</p>	
 							<p><b>Mysuru style practice: </b>Dive deep into the essence of Ashtanga Yoga with our Mysore-style classes. In this self-paced format, students receive personalized instruction and adjustments tailored to their individual needs, allowing for a transformative and empowering practice experience.</p>
 						    <p><b>Pranayama: </b>Pranayama is a fundamental aspect of yoga practice that involves various breathing techniques. In Sanskrit, "prana" means life force or vital energy, and "ayama" means control or expansion. Therefore, pranayama can be understood as the practice of controlling or expanding one's life force through breath.</p>
@@ -135,7 +137,8 @@
 					<section>
 						<header>
 							<h2>Testimonial</h2>
-							<h6>From google reviews</h6>
+							<h6><a href="https://www.google.com/search?q=The+Three+Sisters+Yoga+Shala+reviews" target="_blank">The Three Sisters Yoga Shala - Google Reviews</a>
+							</h6>
 						</header>
 						<div class="content">
 							<div class="stars">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
@@ -417,7 +420,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 				-->
 
 				<!-- Section -->
-					<section>
+					<section id="contact">
 						<header>
 							<h2>Get in touch</h2>
 						</header>
@@ -431,13 +434,18 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 								<li>
 									<h3>Phone</h3>
 									<a href="#">(91) 8762431359</a>
+									<p>To send us a message on WhatsApp  <a href="https://api.whatsapp.com/send?phone=+8762431359"><img class="whatsapp-icon" src="images/gallery/icons/whatsapp-icon.png" alt="WhatsApp Icon"></a></p>
+
 								</li>
 								<li>
 									<h3>Address</h3>
 									<span>Three Sisters Yoga Shala
 										# 366, Chaluvamba Agrahara
 										K.R. Mohalla (Next to Kaveri Hotel)
-										Mysore 570004. India</span>
+										Mysore 570004. India
+									</span>
+									<p>To find our location, click <a href="https://www.google.com/maps?q=The+Three+Sisters+Yoga+Shala">here</a> to open Google Maps.</p>
+
 								</li>
 								<li>
 									<h3>Elsewhere</h3>
