update google reviews

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Paradigm Shift by HTML5 UP</title>
+		<title>Shashikala Ashtanga Yoga</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
@@ -137,7 +137,7 @@
 					<section>
 						<header>
 							<h2>Testimonial</h2>
-							<h6><a href="https://www.google.com/search?q=The+Three+Sisters+Yoga+Shala+reviews" target="_blank">The Three Sisters Yoga Shala - Google Reviews</a>
+							<h6><a href="https://www.google.com/search?q=The+Three+Sisters+Yoga+Shala+reviews#ip=1&lrd=0x3baf700f0d8fac1b:0xbf78d0b62c5ed31b,1,,,," target="_blank">The Three Sisters Yoga Shala - Google Reviews</a>
 							</h6>
 						</header>
 						<div class="content">
@@ -505,7 +505,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 					</section>
 
 				<!-- Copyright -->
-					<div class="copyright">&copy; Untitled. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+					<div class="copyright">&copy; Shashikala Ashtanga Yoga. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
 
 			</div>
 
