fix whatsapp link

--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 								<li>
 									<h3>Phone</h3>
 									<a href="#">(91) 8762431359</a>
-									<p>To send us a message on WhatsApp  <a href="https://api.whatsapp.com/send?phone=+8762431359"><img class="whatsapp-icon" src="images/gallery/icons/whatsapp-icon.png" alt="WhatsApp Icon"></a></p>
+									<p>To send us a message on WhatsApp  <a href="https://api.whatsapp.com/send?phone=8762431359"><img class="whatsapp-icon" src="images/gallery/icons/whatsapp-icon.png" alt="WhatsApp Icon"></a></p>
 
 								</li>
 								<li>
