--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							<h2>Our story</h2>
 						</header>
 						<div class="content">
-							<p><strong>Our story</strong> Shashikala is a ashtanga yoga teacher in Mysore, India. There are actually only two female teachers in Mysore: Saraswathi, Shri K. Pattabhi Jois daughter, and Shashikala. Shashikala practiced with Pattabhi Jois for about 15 years, from 1994 until 2009 when he passed away. She now teaches ashtanga yoga at The Three Sisters Yogashala near Lakshmipuram. Shashikala is the youngest of the famous three sisters. For many years they have been offering different services to yogis who come to practice ashtanga yoga in Mysore</p>
+							<p><strong>Our story</strong> Shashikala is a ashtanga yoga teacher in Mysore, India. There were actually only two female teachers in Mysore: Saraswathi, Shri K. Pattabhi Jois daughter, and Shashikala. Shashikala practiced with Pattabhi Jois for about 15 years, from 1994 until 2009 when he passed away. She now teaches ashtanga yoga at The Three Sisters Yogashala near Lakshmipuram. Shashikala is the youngest of the famous three sisters. For many years they have been offering different services to yogis who come to practice ashtanga yoga in Mysore</p>
 							<span class="image main"><img src="images/Shashikala-Yoga-Mysore.jpg" alt="" /></span>
 						</div>
 					</section>
@@ -64,7 +64,6 @@
 							<h2>Services provided</h2>
 						</header>
 						<div class="content">
-							<p><strong>Services provided</strong> The following services are provided in our yogashala</p>
 								<img src="images/gallery/icons/guru32.png" alt="" sizes="16x16" rel="icon">      Beginners Yoga</li></br>
 								<img src="images/gallery/icons/guru32.png" alt="" sizes="16x16" rel="icon">      Mysuru style practice</li></br>
 								<img src="images/gallery/icons/guru32.png" alt="" sizes="16x16" rel="icon">      Pranayama</li></br>
