fix whatsapp and add services

--- a/index.html
+++ b/index.html
@@ -64,13 +64,14 @@
 							<h2>Services provided</h2>
 						</header>
 						<div class="content">
-								<img src="images/gallery/icons/guru32.png" alt="" sizes="16x16" rel="icon">      Beginners Yoga</li></br>
-								<img src="images/gallery/icons/guru32.png" alt="" sizes="16x16" rel="icon">      Mysuru style practice</li></br>
-								<img src="images/gallery/icons/guru32.png" alt="" sizes="16x16" rel="icon">      Pranayama</li></br>
-								<img src="images/gallery/icons/guru32.png" alt="" sizes="16x16" rel="icon">      Teacher training</li></br>
-							<p><b>Beginners: </b>We teach beginners to advanced yoga practitioners and drop in classes are allowed for all type of practitioners</p>	
+							<p><b>We offer the following services which are available in daily(drop in classes), Weekly or monthly formats. The services can be taken in a combination too</b></p>
+							<img src="images/gallery/icons/guru32.png" alt="" sizes="16x16" rel="icon">      Mysuru style practice</br>
+							<img src="images/gallery/icons/guru32.png" alt="" sizes="16x16" rel="icon">      Pranayama</br>
+							<img src="images/gallery/icons/guru32.png" alt="" sizes="16x16" rel="icon">      Mudra classes</br>
+							<img src="images/gallery/icons/guru32.png" alt="" sizes="16x16" rel="icon">      Teacher training</br>
 							<p><b>Mysuru style practice: </b>Dive deep into the essence of Ashtanga Yoga with our Mysore-style classes. In this self-paced format, students receive personalized instruction and adjustments tailored to their individual needs, allowing for a transformative and empowering practice experience.</p>
 						    <p><b>Pranayama: </b>Pranayama is a fundamental aspect of yoga practice that involves various breathing techniques. In Sanskrit, "prana" means life force or vital energy, and "ayama" means control or expansion. Therefore, pranayama can be understood as the practice of controlling or expanding one's life force through breath.</p>
+							<p><b>Mudra: </b>In yoga and meditation, a mudra is a symbolic or ritual gesture, usually performed with the hands and fingers. Mudras can facilitate the flow of energy in the body and are often used in conjunction with pranayama (breathing exercises) and meditation practices.</b></p>
 						    <p><b>Teacher Training: </b>Teacher training has the following included pratice 6-8 am, 10-12 am stretching and adjustments and 2-4 pm mudras and full vinyasa</p>
 						</div>
 					</section>
@@ -433,7 +434,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 								<li>
 									<h3>Phone</h3>
 									<a href="#">(91) 8762431359</a>
-									<p>To send us a message on WhatsApp  <a href="https://api.whatsapp.com/send?phone=8762431359"><img class="whatsapp-icon" src="images/gallery/icons/whatsapp-icon.png" alt="WhatsApp Icon"></a></p>
+									<p>To send us a message on WhatsApp  <a href="https://api.whatsapp.com/send?phone=918762431359"><img class="whatsapp-icon" src="images/gallery/icons/whatsapp-icon.png" alt="WhatsApp Icon"></a></p>
 
 								</li>
 								<li>
