add font page picture

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							</ul>
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center"><img src="images/pic01.webp" alt="" /></span>
+							<span class="image fill" data-position="center"><img src="images/yoga_group.jpg" alt="" /></span>
 						</div>
 					</section>
 
@@ -55,6 +55,9 @@
 						<div class="content">
 							<p><strong>Our story</strong> Shashikala is a ashtanga yoga teacher in Mysore, India. There were actually only two female teachers in Mysore: Saraswathi, Shri K. Pattabhi Jois daughter, and Shashikala. Shashikala practiced with Pattabhi Jois for about 15 years, from 1994 until 2009 when he passed away. She now teaches ashtanga yoga at The Three Sisters Yogashala near Lakshmipuram. Shashikala is the youngest of the famous three sisters. For many years they have been offering different services to yogis who come to practice ashtanga yoga in Mysore</p>
 							<span class="image main"><img src="images/Shashikala-Yoga-Mysore.jpg" alt="" /></span>
+							<!-- <ul class="actions stacked">
+								<li><a href="./story/story.html" class="button">Learn More</a></li>
+							</ul> -->
 						</div>
 					</section>
 
