add google analytics

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 									<ul class="icons">
 										<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
 										<li><a href="https://www.facebook.com/3sistersyogashala/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<!-- <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
+										<li><a href="https://www.instagram.com/shashikalagovinda/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 
 									</ul>
 								</li>
@@ -520,6 +520,14 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 			<script src="assets/js/banner.js"></script>
+			<script async src="https://www.googletagmanager.com/gtag/js?id=G-LX7PY7E3Y1"></script>
+			<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'G-LX7PY7E3Y1');
+			</script>
 
 	</body>
 </html>
